# Charon

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
data/training/: clint_merged.csv
data/validation/: adme_reference.csv
docs/superpowers/: sprint10-ivive-bias-ticket.md
models/: model_metadata.json  xgboost_clint.json  xgboost_clint_classifier.json  xgboost_clint_classifier_oof_probs.npy  xgboost_clint_oof_residuals.npy  xgboost_fup.json  xgboost_fup_oof_residuals.npy
scripts/: _train_common.py  sprint15_audit.py  sprint17_audit.py  train_clint.py  train_clint_classifier.py  train_fup.py
src/charon/: __init__.py  pipeline.py
tests/: conftest.py
tests/integration/: test_atorvastatin_oatp_enhancement.py  test_conformal_end_to_end.py  test_diclofenac_ugt_enhancement.py  test_fih_pipeline.py  test_layer3_decomposition_benchmark.py  test_lisinopril_peff_correction.py  test_obach_panel_smoke.py  test_oral_pipeline.py  test_propranolol_cyp2d6_enhancement.py  test_report_e2e.py  test_smiles_to_pk.py  test_tier3_end_to_end.py  test_uncertainty_pipeline.py
tests/regression/: test_known_drugs.py
tests/unit/: test_acat.py  test_admet_ensemble.py  test_benchmark_metrics.py  test_bioavailability_csv.py  test_bp_ratio_predict.py  test_cli.py  test_clint_ad.py  test_clint_classifier_artifacts.py  test_clint_classifier_predict.py  test_collector.py  test_compound_config.py  test_compound_type_resolution.py  test_config_manager.py  test_conformal.py  test_conformal_default.py  test_decomposition.py  test_dose_projector.py  test_dose_range.py  (+48 more)
(+126 files in other folders)
